@@ -62,9 +62,9 @@ if (MINGW)
   set (HEADERS credentials.h openvas_hosts.h
        gpgme_util.h pwpolicy.h)
 else (MINGW)
-  set (FILES credentials.c openvas_hosts.c drop_privileges.c
+  set (FILES credentials.c openvas_hosts.c
        nvticache.c kb_redis.c gpgme_util.c pwpolicy.c)
-  set (HEADERS credentials.h openvas_hosts.h drop_privileges.h
+  set (HEADERS credentials.h openvas_hosts.h
        kb.h nvticache.h gpgme_util.h pwpolicy.h)
 endif (MINGW)
 
