@@ -1,3 +1,13 @@
+2017-01-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Module "drop_privileges" is now in gvm-libs/base.
+
+	* base/drop_privileges.c, base/drop_privileges.h: Removed.
+
+	* base/CMakeLists.txt: Removed handling of this module.
+
+	* COPYING: Removed the files respectively.
+
 2016-12-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Module "openvas_string" is now in gvm-libs/base.
